--- a/ATE_Revisions.Rmd
+++ b/ATE_Revisions.Rmd
@@ -402,7 +402,7 @@ Sim_2=lapply(n_seg, function(x) Sim_2_fn(x,rep=100))
 
 
 
-```{r figR1,message=FALSE, echo=FALSE,warning=FALSE,fig1.pos="H",fig.width=7,fig.height=4,fig.cap="\\label{fig:figR1} Liklihood ratios between the simple pulse and extended pulse model for different durations of admixture for 100, 1000, 10000 and 100000 segments sampled at time 0 and 50 generations after the end of admixture. Boxplots from 100 replications."}
+```{r eval=T,figR1,message=FALSE, echo=FALSE,warning=FALSE,fig1.pos="H",fig.width=7,fig.height=4,fig.cap="\\label{fig:figR1} Liklihood ratios between the simple pulse and extended pulse model for different durations of admixture for 100, 1000, 10000 and 100000 segments sampled at time 0 and 50 generations after the end of admixture. Boxplots from 100 replications."}
 #load("Paper_Revision_Poweranalysis_2.RData")
 load("Paper_Revision_Poweranalysis_all_estimates.RData")
 
@@ -421,13 +421,23 @@ for(i in t_d){
   Sim_2_ggplot_10000 <- rbind(Sim_2_ggplot_10000,Sim_2_ggplot_10000_x)
   Sim_2_ggplot_100000 <- rbind(Sim_2_ggplot_100000,Sim_2_ggplot_100000_x)
 }
+Sim_2_ggplot_100$n_seg <- 100
+Sim_2_ggplot_1000$n_seg <- 1000
+Sim_2_ggplot_10000$n_seg <- 10000
+Sim_2_ggplot_100000$n_seg <- 100000
+
+Sim_2_ggplot_all_OG <- rbind(Sim_2_ggplot_100,Sim_2_ggplot_1000,Sim_2_ggplot_10000,Sim_2_ggplot_100000)
 
 
-Sim_2_ggplot_all <- rbind(Sim_2_ggplot_100,Sim_2_ggplot_1000,Sim_2_ggplot_10000,Sim_2_ggplot_100000)
+Sim_2_ggplot_all_t_0 <- Sim_2_ggplot_all_OG[,c(1:4,9,10,12)]
+colnames(Sim_2_ggplot_all_t_0) <- c("LRT","tm_SP_est","tm_EP_est","k_EP_est","tm_true","td_true","n_seg")
+Sim_2_ggplot_all_t_0$Sampling <- "sampling_at_0"
+Sim_2_ggplot_all_t_closer <- Sim_2_ggplot_all_OG[,c(5:8,11,10,12)]
+colnames(Sim_2_ggplot_all_t_closer) <- c("LRT","tm_SP_est","tm_EP_est","k_EP_est","tm_true","td_true","n_seg")
+Sim_2_ggplot_all_t_closer$Sampling <- "sampling_50_gen_after_gf"
 
-Sim_2_ggplot_all <- data.frame(LRT=c(Sim_2_ggplot_all$V1,Sim_2_ggplot_all$V5),tm_SP_est=c(Sim_2_ggplot_all$V2,Sim_2_ggplot_all$V6),tm_EP_est=c(Sim_2_ggplot_all$V3,Sim_2_ggplot_all$V7),k_EP_est=c(Sim_2_ggplot_all$V4,Sim_2_ggplot_all$V8),n_seg=rep(c(rep(100,100),rep(1000,100),rep(10000,100),rep(100000,100)),2),
-tm_true=c(Sim_2_ggplot_all$V9,Sim_2_ggplot_all$V11),td_true=c(Sim_2_ggplot_all$V10,Sim_2_ggplot_all$V10))
-Sim_2_ggplot_all$Sampling <- ifelse(Sim_2_ggplot_all$tm_true!=1500,"sampling_50_gen_after_gf","sampling_at_0")
+Sim_2_ggplot_all <- rbind(Sim_2_ggplot_all_t_0,Sim_2_ggplot_all_t_closer)
+
 Sim_2_ggplot_all$LRT <- ifelse(Sim_2_ggplot_all$LRT>=10,10,Sim_2_ggplot_all$LRT)
 Sim_2_ggplot_all$k_true <- 1/((Sim_2_ggplot_all$td_true/(4*Sim_2_ggplot_all$tm_true))^2)
 Sim_2_ggplot_all$k_true_corrected <- ifelse(Sim_2_ggplot_all$k_true>100 ,100,Sim_2_ggplot_all$k_true)
@@ -435,6 +445,7 @@ Sim_2_ggplot_all$tm_SP_est_error <- sqrt((Sim_2_ggplot_all$tm_true-Sim_2_ggplot_
 Sim_2_ggplot_all$tm_EP_est_error <- sqrt((Sim_2_ggplot_all$tm_true-Sim_2_ggplot_all$tm_EP_est)^2)
 Sim_2_ggplot_all$k_EP_est_error <- sqrt((Sim_2_ggplot_all$k_true -Sim_2_ggplot_all$k_EP_est)^2)
 Sim_2_ggplot_all$k_EP_est_error_corrected <- ifelse(Sim_2_ggplot_all$k_true>=100 & Sim_2_ggplot_all$k_EP_est>=100,0,sqrt((Sim_2_ggplot_all$k_true_corrected -Sim_2_ggplot_all$k_EP_est)^2))
+
 Sim_2_ggplot_all_red <- Sim_2_ggplot_all %>% filter(td_true!=200) %>% filter(td_true!=800)
 
 Sim_2_ggplot_all_sig_cutoff <- data.frame(n_seg = c(100,1000,10000,100000), Z = c(2.03136,2.44156,2.61434,2.70554))
@@ -443,9 +454,11 @@ Sim_2_ggplot_all_sig_cutoff <- data.frame(n_seg = c(100,1000,10000,100000), Z = 
 
 
 Plot_power_analysis <- function(Data,Sim_2_ggplot_all_sig_cutoff,Colour_P){
+  Data$Sampling <- factor(Data$Sampling,
+                        levels = c("sampling_at_0","sampling_50_gen_after_gf"),ordered = TRUE)
   Px <-  ggplot(Data,aes(x=as.factor(Sampling),y=LRT,color=as.factor(Sampling)))+
     geom_boxplot()+
-    facet_grid(n_seg~td_true,switch = "x",labeller=labeller(.rows=c("100"="# fragments: 100","1000"="# fragments: 1000", "10000"="# fragments: 10000", "1e+05"="# fragments: 100000")))+
+    facet_grid(n_seg~td_true,switch = "x",labeller=labeller(.rows=c("100"="# seg:\n100","1000"="# seg:\n1000", "10000"="# seg:\n10000", "1e+05"="# seg:\n100000")))+
     geom_hline(data = Sim_2_ggplot_all_sig_cutoff, aes(yintercept = Z))+
     theme(legend.position="bottom",
       axis.text.x=element_blank(),
@@ -453,7 +466,7 @@ Plot_power_analysis <- function(Data,Sim_2_ggplot_all_sig_cutoff,Colour_P){
     ylim(c(-0.5,10))+
     labs(x = "Admixture Duration")+
     labs(y = "log Likelihood Ratio")+
-    #scale_y_continuous("log Likelihood Ratio", sec.axis = sec_axis(n_seg,name = "n unique segments"))+
+    #scale_y_continuous("log Likelihood Ratio", sec.axis = sec_axis(n_seg),name = "n unique segments"))+
     scale_color_manual("",
                        values = c(Colour_P[1],Colour_P[6]),
                        labels = c("Sampled at present","Sampled 50 after end of gene flow"))
@@ -467,7 +480,7 @@ Plot_power_analysis(Sim_2_ggplot_all_red,Sim_2_ggplot_all_sig_cutoff,cbPalette_v
 
 ```
 
-```{r figR1_error_ests,message=FALSE, echo=FALSE,warning=FALSE,fig1.pos="H",fig.width=7,fig.height=4,fig.cap="\\label{fig:figR1_error_ests} Liklihood ratios between the simple pulse and extended pulse model for different durations of admixture for 100, 1000, 10000 and 100000 segments sampled at time 0 and 50 generations after the end of admixture. Boxplots from 100 replications."}
+```{r eval=T,figR1_error_ests,message=FALSE, echo=FALSE,warning=FALSE,fig1.pos="H",fig.width=7,fig.height=4,fig.cap="\\label{fig:figR1_error_ests} Liklihood ratios between the simple pulse and extended pulse model for different durations of admixture for 100, 1000, 10000 and 100000 segments sampled at time 0 and 50 generations after the end of admixture. Boxplots from 100 replications."}
 
 Error_plot <- data.frame(Est_error=c(Sim_2_ggplot_all$tm_SP_est_error,Sim_2_ggplot_all$tm_EP_est_error,Sim_2_ggplot_all$k_EP_est_error ),
                          Est_error_corrected=c(Sim_2_ggplot_all$tm_SP_est_error,Sim_2_ggplot_all$tm_EP_est_error,Sim_2_ggplot_all$k_EP_est_error_corrected ),
@@ -482,7 +495,7 @@ Plot_power_analysis_error <- function(Data,Colour_P){
                                    ,"sampling_50_gen_after_gf_EP_tm","sampling_50_gen_after_gf_EP_td"),ordered = TRUE)
   Px <-  ggplot(Data,aes(x=as.factor(Est_name),y=Est_error,color=as.factor(Est_name)))+
     geom_boxplot()+
-    facet_grid(n_seg~td_true,switch = "x",labeller=labeller(.rows=c("100"="# fragments: 100","1000"="# fragments: 1000", "10000"="# fragments: 10000", "1e+05"="# fragments: 100000")))+
+    facet_grid(n_seg~td_true,switch = "x",labeller=labeller(.rows=c("100"="# seg:\n100","1000"="# seg:\n1000", "10000"="# seg:\n10000", "1e+05"="# seg:\n100000")))+
         ylim(c(0,1000))+
     theme(legend.position="bottom",
       axis.text.x=element_blank(),
@@ -490,19 +503,19 @@ Plot_power_analysis_error <- function(Data,Colour_P){
     labs(x = "Admixture Duration")+
     labs(y = "RMSE")+
     scale_color_manual("",
-                       values = c(Colour_P[1:6]),
-                       labels = c("SP tm sampled at present","SP tm Sampled 50 after end of gene flow",
-                                  "EP tm sampled at present","EP tm Sampled 50 after end of gene flow",
-                                  "EP td sampled at present","EP td Sampled 50 after end of gene flow"))
+                       values = c(Colour_P[1],Colour_P[3],Colour_P[6],Colour_P[9],Colour_P[12],Colour_P[15]),
+                       labels = c("SP tm; ts = present","SP tm; ts = 50 gen after tend",
+                                  "EP tm; ts = present","EP tm; ts = 50 gen after tend",
+                                  "EP td; ts = present","EP td; ts = 50 gen after tend"))
   return(Px)
   
 }
 
-Plot_power_analysis_error(Error_plot_red,cbPalette_viridis)
+Plot_power_analysis_error(Error_plot_red,viridis(15,option = "D"))
 
 ```
 
-```{r figR1_error_ests_corrected,message=FALSE, echo=FALSE,warning=FALSE,fig1.pos="H",fig.width=7,fig.height=4,fig.cap="\\label{fig:figR1_error_ests_corrected} Liklihood ratios between the simple pulse and extended pulse model for different durations of admixture for 100, 1000, 10000 and 100000 segments sampled at time 0 and 50 generations after the end of admixture. Boxplots from 100 replications."}
+```{r eval=T,figR1_error_ests_corrected,message=FALSE, echo=FALSE,warning=FALSE,fig1.pos="H",fig.width=7,fig.height=4,fig.cap="\\label{fig:figR1_error_ests_corrected} Liklihood ratios between the simple pulse and extended pulse model for different durations of admixture for 100, 1000, 10000 and 100000 segments sampled at time 0 and 50 generations after the end of admixture. Boxplots from 100 replications."}
 
 
 
@@ -513,7 +526,7 @@ Plot_power_analysis_error_corrected <- function(Data,Colour_P){
                                    ,"sampling_50_gen_after_gf_EP_tm","sampling_50_gen_after_gf_EP_td"),ordered = TRUE)
   Px <-  ggplot(Data,aes(x=as.factor(Est_name),y=Est_error_corrected,color=as.factor(Est_name)))+
     geom_boxplot()+
-    facet_grid(n_seg~td_true,switch = "x",labeller=labeller(.rows=c("100"="# fragments: 100","1000"="# fragments: 1000", "10000"="# fragments: 10000", "1e+05"="# fragments: 100000")))+
+    facet_grid(n_seg~td_true,switch = "x",labeller=labeller(.rows=c("100"="# seg:\n100","1000"="# seg:\n1000", "10000"="# seg:\n10000", "1e+05"="# seg:\n100000")))+
         ylim(c(0,1000))+
     theme(legend.position="bottom",
       axis.text.x=element_blank(),
@@ -521,14 +534,14 @@ Plot_power_analysis_error_corrected <- function(Data,Colour_P){
     labs(x = "Admixture Duration")+
     labs(y = "RMSE")+
     scale_color_manual("",
-                       values = c(Colour_P[1:6]),
-                       labels = c("SP tm sampled at present","SP tm Sampled 50 after end of gene flow",
-                                  "EP tm sampled at present","EP tm Sampled 50 after end of gene flow",
-                                  "EP td sampled at present","EP td Sampled 50 after end of gene flow"))
+                       values = c(Colour_P[1],Colour_P[3],Colour_P[6],Colour_P[9],Colour_P[12],Colour_P[15]),
+                       labels = c("SP tm; ts = present","SP tm; ts = 50 gen after tend",
+                                  "EP tm; ts = present","EP tm; ts = 50 gen after tend",
+                                  "EP td; ts = present","EP td; ts = 50 gen after tend"))
   return(Px)
   
 }
-Plot_power_analysis_error_corrected(Error_plot_red,cbPalette_viridis)
+Plot_power_analysis_error_corrected(Error_plot_red,viridis(15,option = "D"))
 ```
 
 ## Figure 3.1 and corresponding supplements
@@ -1668,10 +1681,12 @@ AIC_comp=data.frame(AIC_SP=Plot.data_ALD$AIC_SP,AIC_EP=Plot.data_ALD$AIC_EP,
 AIC_comp$AIC_SP_rounded <- ifelse(AIC_comp$AIC_SP>=20,20,AIC_comp$AIC_SP)
 AIC_comp$Name <- factor(AIC_comp$Name,
                     levels = c("Constant","HapMap_no_correction","HapMap_AAMap_correction","HapMap_HapMap_correction"),ordered = TRUE)
+AIC_comp$Data <- "ALD"
 AIC_comp_results <- AIC_comp %>% filter(Name!="HapMap_no_correction") %>% filter(Name!="HapMap_AAMap_correction")
+
 P_AIC_results <- ggplot(AIC_comp_results, aes(x=as.factor(Name), y=AIC_SP_rounded,color=as.factor(Name))) + 
                 geom_boxplot()+
-                facet_grid(~GF_duration,switch = "x")+
+                facet_grid(Data~GF_duration,switch = "x")+
                 labs(y = "AIC")+
                 labs(x = "")+
                 theme(
@@ -1688,7 +1703,7 @@ P_AIC_results <- ggplot(AIC_comp_results, aes(x=as.factor(Name), y=AIC_SP_rounde
 AIC_comp_supplements <- AIC_comp %>% filter(Name!="Constant") %>% filter(Name!="HapMap_HapMap_correction")
 P_AIC_supplements <- ggplot(AIC_comp_supplements, aes(x=as.factor(Name), y=AIC_SP_rounded,color=as.factor(Name))) + 
                 geom_boxplot()+
-                facet_grid(~GF_duration,switch = "x")+
+                facet_grid(Data~GF_duration,switch = "x")+
                 labs(y = "AIC")+
                 labs(x = "")+
                 theme(
@@ -1710,10 +1725,11 @@ F_Test_comp=data.frame(F_Test_p=Plot.data_ALD$F_Test,
 F_Test_comp$F_Test_p_rounded <- F_Test_comp$F_Test_p
 F_Test_comp$Name <- factor(F_Test_comp$Name,
                     levels = c("Constant","HapMap_no_correction","HapMap_AAMap_correction","HapMap_HapMap_correction"),ordered = TRUE)
+F_Test_comp$Data <- "ALD"
 F_Test_comp_results <- F_Test_comp %>% filter(Name!="HapMap_no_correction") %>% filter(Name!="HapMap_AAMap_correction")
 P_F_Test_results <- ggplot(F_Test_comp_results, aes(x=as.factor(Name), y=(F_Test_p_rounded),color=as.factor(Name))) + 
                 geom_boxplot()+
-                facet_grid(~GF_duration,switch = "x")+
+                facet_grid(Data~GF_duration,switch = "x")+
                 geom_hline( aes(yintercept = 0.05 ))+
                 labs(y = "p-value")+
                 labs(x = "Admixture Duration")+
@@ -1732,7 +1748,7 @@ P_F_Test_results <- ggplot(F_Test_comp_results, aes(x=as.factor(Name), y=(F_Test
 F_Test_comp_supplements <- F_Test_comp %>% filter(Name!="Constant") %>% filter(Name!="HapMap_HapMap_correction")
 P_F_Test_supplements <- ggplot(F_Test_comp_supplements, aes(x=as.factor(Name), y=(F_Test_p_rounded),color=as.factor(Name))) + 
                 geom_boxplot()+
-                facet_grid(~GF_duration,switch = "x")+
+                facet_grid(Data~GF_duration,switch = "x")+
                 geom_hline( aes(yintercept = 0.05 ))+
                 labs(y = "p-value")+
                 labs(x = "Admixture Duration")+
@@ -1755,19 +1771,21 @@ P_F_Test_supplements <- ggplot(F_Test_comp_supplements, aes(x=as.factor(Name), y
 
 
 
-```{r eval=T,figResult3_3, message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=7,fig.height=7,fig.cap="\\label{fig:figResult3_3} "}
+```{r eval=T,figResult3_3, message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=4,fig.height=4,fig.cap="\\label{fig:figResult3_3} "}
 
 
 Plot_LRT<- function(Data,Colour_P,main,recomb_levels,recomb_lables){
   Data$LRT <- ifelse(Data$LRT>=10,10,Data$LRT)
   Data$recomb <- factor(Data$recomb,
                       levels = recomb_levels,ordered = TRUE)
+  Data$Data <- factor(Data$Data,
+                      levels = c("True Segments","Inferred Segments"),ordered = TRUE)
   ggplot(Data,aes(x=as.factor(recomb),y=LRT,color=as.factor(recomb)))+
     geom_boxplot()+
-    facet_grid(~as.factor(td),switch = "x")+
+    facet_grid(Data~as.factor(td),switch = "x")+
     geom_hline( aes(yintercept = 2.61434 ))+
     ggtitle(main)+
-    theme(
+    theme(strip.text.x = element_blank(),
       axis.text.x=element_blank(),
       axis.ticks.x=element_blank(),
       legend.position="none",
@@ -1783,37 +1801,42 @@ Plot_LRT<- function(Data,Colour_P,main,recomb_levels,recomb_lables){
 
 
 True_segments_results <- True_segments %>% filter(recomb!="varying no correction") %>% filter(recomb!="varying AAMap correction")
+True_segments_results$Data <- "True Segments"
 Inferred_segments_results <- Inferred_segments %>% filter(recomb!="varying no correction") %>% filter(recomb!="varying AAMap correction")
+Inferred_segments_results$Data <- "Inferred Segments"
 
-Plot_LRT_true_results <- Plot_LRT(True_segments_results,cbPalette_viridis,"",c("constant","varying HapMap correction"),c("Constant;Constant","HapMap;HapMap"))
-Plot_LRT_inf_results <- Plot_LRT(Inferred_segments_results,cbPalette_viridis,"",c("constant","varying HapMap correction"),c("Constant;Constant","HapMap;HapMap"))
+Segments_LRT_result <- rbind(True_segments_results,Inferred_segments_results)
 
-Segment_ALD_Model_comparison_results <- ggarrange(Plot_LRT_true_results,Plot_LRT_inf_results,P_F_Test_results,labels = c("A","B","C"),
-                                                  nrow=3,ncol=1,common.legend = T,legend = 'bottom')
+Plot_LRT_seg_results <- Plot_LRT(Segments_LRT_result,cbPalette_viridis,"",c("constant","varying HapMap correction"),c("Constant;Constant","HapMap;HapMap"))
+
+Segment_ALD_Model_comparison_results <- ggarrange(Plot_LRT_seg_results,P_F_Test_results,labels = c("A","B"),
+                                                  nrow=2,ncol=1,heights = c(0.63,0.37),common.legend = T,legend = 'bottom')
 
 Segment_ALD_Model_comparison_results
-
 ```
 
-```{r eval=T,figResult3_3_supplements, message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=7,fig.height=7,fig.cap="\\label{fig:figResult3_3_supplements} "}
+```{r eval=T,figResult3_3_supplements, message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=4,fig.height=4,fig.cap="\\label{fig:figResult3_3_supplements} "}
 
 
 True_segments_supplements <- True_segments %>% filter(recomb!="constant") %>% filter(recomb!="varying HapMap correction")
+True_segments_supplements$Data <- "True Segments"
 Inferred_segments_supplements <- Inferred_segments %>% filter(recomb!="constant") %>% filter(recomb!="varying HapMap correction")
+Inferred_segments_supplements$Data <- "Inferred Segments"
 
-Plot_LRT_true_supplements <- Plot_LRT(True_segments_supplements,cbPalette_viridis,"",c("varying no correction","varying AAMap correction"),c("HapMap;Constant","HapMap;AAMap"))
-Plot_LRT_inf_supplements <- Plot_LRT(Inferred_segments_supplements,cbPalette_viridis,"",c("varying no correction","varying AAMap correction"),c("HapMap;Constant","HapMap;AAMap"))
+Segments_LRT_supplements <- rbind(True_segments_supplements,Inferred_segments_supplements)
 
-Segment_ALD_Model_comparison_results <- ggarrange(Plot_LRT_true_supplements,Plot_LRT_inf_supplements,P_F_Test_supplements,labels = c("A","B","C"),
-                                                  nrow=3,ncol=1,common.legend = T,legend = 'bottom')
+Plot_LRT_seg_sup <- Plot_LRT(Segments_LRT_supplements,cbPalette_viridis,"",c("varying no correction","varying AAMap correction"),c("HapMap;Constant","HapMap;AAMap"))
 
-Segment_ALD_Model_comparison_results
+Segment_ALD_Model_comparison_supplements <- ggarrange(Plot_LRT_seg_sup,P_F_Test_supplements,labels = c("A","B"),
+                                                  nrow=2,ncol=1,heights = c(0.63,0.37),common.legend = T,legend = 'bottom')
+
+Segment_ALD_Model_comparison_supplements
 ```
 
 
 # Icelandic segments
 
-```{r eval=T,fig_fit_to_Icelandig_seg, message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=9,fig.height=10,fig.cap="\\label{fig:fig_fit_to_Icelandig_seg} "}
+```{r eval=F,fig_fit_to_Icelandig_seg, message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=9,fig.height=10,fig.cap="\\label{fig:fig_fit_to_Icelandig_seg} "}
 
 ## this takes several durations and fits them to the data (i.e. tm is the free parameter k is given by td and the "suggested" tm)
 source("~/Desktop/Neandertal_Human_Introgression_Project/Paper/Direct_Trat_length_estimation/Icelandic_fit_new.R")
@@ -2021,20 +2044,24 @@ Fig_2_1$Demography <- "0_Simple"
 Fig_2_1$Recomb.rate <- "0_constant"
 Fig_2_1$GF_model <- ifelse(Fig_2_1$Scenario.name=="_Scenario_16_","EP","SP")
 
-Fig_2_2 <- Read_GLM_indata("/mnt/diversity/leonardo_iasi/Adm_Time_Dating_Sim/Paper_Revisions/Fig_2_B_complex_revision/Result_classic_Exp/")
+#Fig_2_2 <- Read_GLM_indata("/mnt/diversity/leonardo_iasi/Adm_Time_Dating_Sim/Paper_Revisions/Fig_2_B_complex_revision/Result_classic_Exp/")
+Fig_2_2 <- Read_GLM_indata("/mnt/diversity/leonardo_iasi/Adm_Time_Dating_Sim/Paper_Revisions/Fig_2_B_complex_Skov_revision/Result_together/")
 Fig_2_2$Demography <- "0_Complex"
 Fig_2_2$Recomb.rate <- "0_constant"
-Fig_2_2$GF_model <- ifelse(Fig_2_2$Scenario.name=="_Complex_Demographies_Scenario_3_","EP","SP")
+#Fig_2_2$GF_model <- ifelse(Fig_2_2$Scenario.name=="_Complex_Demographies_Scenario_3_","EP","SP")
+Fig_2_2$GF_model <- ifelse(Fig_2_2$Scenario.name=="Skov_Complex_Demographies_Scenario_1_","SP","EP")
 
 Fig_2_3 <- Read_GLM_indata("/mnt/diversity/leonardo_iasi/Adm_Time_Dating_Sim/Paper_Revisions/Fig_2_C_corrected_revision_new/Result_Exp/")
 Fig_2_3$Demography <- "0_Simple"
 Fig_2_3$Recomb.rate <- "0_varying"
 Fig_2_3$GF_model <- ifelse(Fig_2_3$Scenario.name=="_Recombination_Map_Scenario_3_","EP","SP")
 
-Fig_2_4 <- Read_GLM_indata(path = "/mnt/diversity/leonardo_iasi/Adm_Time_Dating_Sim/Paper_Revisions/Fig_2_D_Complex_corrected_revision_new/Result_Exp/")
+#Fig_2_4 <- Read_GLM_indata(path = "/mnt/diversity/leonardo_iasi/Adm_Time_Dating_Sim/Paper_Revisions/Fig_2_D_Complex_corrected_revision_new/Result_Exp/")
+Fig_2_4 <- Read_GLM_indata(path = "/mnt/diversity/leonardo_iasi/Adm_Time_Dating_Sim/Paper_Revisions/Fig_2_D_Complex_Skov_revision/Result_Simple_Pulse/")
 Fig_2_4$Demography <- "0_Complex"
 Fig_2_4$Recomb.rate <- "0_varying"
-Fig_2_4$GF_model <- ifelse(Fig_2_4$Scenario.name=="_Recombination_Map_and_Complex_Demographies_Scenario_3_","EP","SP")
+#Fig_2_4$GF_model <- ifelse(Fig_2_4$Scenario.name=="_Recombination_Map_and_Complex_Demographies_Scenario_3_","EP","SP")
+Fig_2_4$GF_model <- ifelse(Fig_2_4$Scenario.name=="_Recombination_Map_and_Skov_Demographies_Scenario_3_","EP","SP")
 
 ######## model with response being the difference between the estimated Admixture time and the true one #####
 # full model with Ascertainement, min dist, Demographi and recombination rate as predictore but no interactions
@@ -2227,7 +2254,7 @@ Fig_1_B_Means_per_duration$relative_dif <- abs(1-(1500/Fig_1_B_Means_per_duratio
 
 ```
 
-```{r fig2,message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=9,fig.height=9,fig.cap="\\label{fig:fig2} A) Comparison of mean admixture time estimates between simple and extended pulse gene flow for different admixture times. The duration of continuous gene flow $t_d$ corresponds to 50% of the mean admixture time $t_m$, black line indicates true mean admixture time. B) Comparison of mean admixture time estimates for simulations with a mean time of admixture of 1500 generations ago, at a varying durations of gene flow. Boxplot created from 100 simulation replicates, respectively."}
+```{r eval=F,fig2,message=FALSE, echo=FALSE,warning=FALSE,fig2.pos="H",fig.width=9,fig.height=9,fig.cap="\\label{fig:fig2} A) Comparison of mean admixture time estimates between simple and extended pulse gene flow for different admixture times. The duration of continuous gene flow $t_d$ corresponds to 50% of the mean admixture time $t_m$, black line indicates true mean admixture time. B) Comparison of mean admixture time estimates for simulations with a mean time of admixture of 1500 generations ago, at a varying durations of gene flow. Boxplot created from 100 simulation replicates, respectively."}
 
 ######################## GG PLotting ###########################
 ## ggplot Figure 1 A
