Update on Overleaf.

--- a/Paper/Supplements.tex
+++ b/Paper/Supplements.tex
@@ -159,6 +159,12 @@ since $\frac{\Gamma(k+1)}{\Gamma(k)} =k$ we can re-write the likelihood to:
 
 \begin{figure}
 \centering
+\includegraphics{ATE_Revisions_files/figure-latex/figR1_error_ests-1.pdf}
+\caption{\label{fig:figR1_error_ests} Power analysis parameter estimates}
+\end{figure}
+
+\begin{figure}
+\centering
 \includegraphics{ATE_Revisions_files/figure-latex/figResult3_1_Supplement-1.pdf}
 \caption{\label{fig:figResult3_1_Supplement} Simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago. A) Mean time estimates. B) Duration estimate.}
 \end{figure}
